to-deploy.yml
#jinja2: lstrip_blocks: True
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  VPC with 4 subnets, 2 public and 2 private. For EKS
Parameters:
  EnvType:
    Description: Environment type.
    Default: dev
    Type: String
    AllowedValues:
      - dev
      - qa
    ConstraintDescription: must specify dev or qa.
Conditions:
  CreateQAResources: !Equals 
    - !Ref EnvType
    - qa
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.168.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Join [ "-", [ MandiaVPC, !Ref EnvType ] ]

  
  PublicSubnet01:
    Type: 'AWS::EC2::Subnet'
    
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.0.0/18
      AvailabilityZone: us-east-2a
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: !Join [ "-", [ MandiaVPC, PublicSubnet01 , !Ref EnvType ] ]
        
  
  PublicSubnet02:
    Type: 'AWS::EC2::Subnet'
    
    Condition: CreateQAResources
    
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.64.0/18
      AvailabilityZone: us-east-2b
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: !Join [ "-", [ MandiaVPC, PublicSubnet02 , !Ref EnvType ] ]
        
  
  PrivateSubnet01:
    Type: 'AWS::EC2::Subnet'
    
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.128.0/18
      AvailabilityZone: us-east-2a
      MapPublicIpOnLaunch: False
      Tags:
        - Key: Name
          Value: !Join [ "-", [ MandiaVPC, PrivateSubnet01 , !Ref EnvType ] ]
        
        - Key: kubernetes.io/role/internal-elb
          Value: 1
        
  
  PrivateSubnet02:
    Type: 'AWS::EC2::Subnet'
    
    Condition: CreateQAResources
    
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.192.0/18
      AvailabilityZone: us-east-2b
      MapPublicIpOnLaunch: False
      Tags:
        - Key: Name
          Value: !Join [ "-", [ MandiaVPC, PrivateSubnet02 , !Ref EnvType ] ]
        
        - Key: kubernetes.io/role/internal-elb
          Value: 1
        
  

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Public Subnets

  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  NatGatewayEIP1:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc

  NatGateway01:
    DependsOn:
    - NatGatewayEIP1
    - PublicSubnet01
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP1.AllocationId'
      SubnetId: !Ref PublicSubnet01
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-NatGatewayAZ1'

  PrivateRouteTable01:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ1

  PrivateRoute01:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway01
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01

  NatGatewayEIP2:
    DependsOn:
    - VPCGatewayAttachment
    Type: 'AWS::EC2::EIP'
    Condition: CreateQAResources
    Properties:
      Domain: vpc
      
  NatGateway02:
    DependsOn:
    - NatGatewayEIP2
    - PublicSubnet02
    - VPCGatewayAttachment
    Type: AWS::EC2::NatGateway
    Condition: CreateQAResources
    Properties:
      AllocationId: !GetAtt 'NatGatewayEIP2.AllocationId'
      SubnetId: !Ref PublicSubnet02
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-NatGatewayAZ2'

  PrivateRouteTable02:
    Type: 'AWS::EC2::RouteTable'
    Condition: CreateQAResources
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: Private Subnet AZ2

  PrivateRoute02:
    DependsOn:
    - VPCGatewayAttachment
    - NatGateway02
    Type: AWS::EC2::Route
    Condition: CreateQAResources
    Properties:
      RouteTableId: !Ref PrivateRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02

  PublicSubnet01RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet01
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet02RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Condition: CreateQAResources
    Properties:
      SubnetId: !Ref PublicSubnet02
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet01RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet01
      RouteTableId: !Ref PrivateRouteTable01

  PrivateSubnet02RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Condition: CreateQAResources
    Properties:
      SubnetId: !Ref PrivateSubnet02
      RouteTableId: !Ref PrivateRouteTable02

  ControlPlaneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster communication with worker nodes
      VpcId: !Ref VPC
  
Outputs:
  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VPCID"
  ControlPlaneSecurityGroupId:
    Description: Security group id
    Value: !Ref ControlPlaneSecurityGroup
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-SECURITY-GROUP-ID"
  SubnetIds:
    Description: Subnets IDs in the VPC
    Value: !Join [ ",", [ !Ref PublicSubnet01, !Ref PublicSubnet02, !Ref PrivateSubnet01, !Ref PrivateSubnet02 ] ]
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-SUBNETS"
